# daddy-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN-neo4j-knowledge-graphs.md  README.md  docker-compose.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  runtime.lock.json
.claude/: mcp_servers.json
.design-handoff-v3/v3/handoff/: nano-banana-prompt.txt
docs/: FEATURE_ARCHITECTURE_STANDARD.md  codebase-mcp.md  knowledge-graph.md  session-memory.md  viz.md
mcp-server/: package.json
scripts/: _compute_sri_hashes.py  compute-sri-hashes.sh  ingest_sessions_to_memory.py  init-databases.sh
src/daddy_agent/: __init__.py  neo4j_client.py
src/daddy_agent/codebase_graph/: __init__.py  git_coupling.py  git_hooks.py  indexer.py  ingester.py  parser.py  schema.py
src/daddy_agent/codebase_mcp/: __init__.py  __main__.py  queries.py  safety.py  server.py
src/daddy_agent/session_memory/: __init__.py  config.py  facts.py  kanban.py  lifecycle.py
src/daddy_agent/viz/: __init__.py  __main__.py  obsidian_export.py  server.py
src/features/: CLAUDE.md
src/main/: index.ts  sentry.ts  standalone.ts
src/main/http/: index.ts  sessions.ts  teams.ts
src/main/ipc/: handlers.ts  knowledgeGraph.ts  sessions.ts  teams.ts
src/main/services/: index.ts
src/main/types/: chunks.ts  domain.ts  messages.ts
src/main/utils/: pathDecoder.ts
src/preload/: index.ts
src/preload/constants/: ipcChannels.ts
src/renderer/: App.tsx  index.css  index.html  sentry.ts
src/renderer/api/: httpClient.ts
src/renderer/features/: CLAUDE.md
src/renderer/hooks/: useCollapsedGroups.ts  useDocumentVisible.ts  useFileListCacheWarmer.ts  useKeyboardShortcuts.ts  useResizableColumns.ts  useTaskLocalState.ts  useTheme.ts
src/renderer/lib/: glass.ts  lenis.ts
src/renderer/services/: createTeamDraftStorage.ts
src/renderer/store/: index.ts  types.ts
src/renderer/types/: data.ts  tabs.ts
src/renderer/utils/: bugReportUtils.ts  (+12 more)
tests/: conftest.py  test_neo4j_client.py
tests/codebase_graph/: conftest.py  test_git_coupling.py  test_git_hooks.py  test_indexer_incremental.py  test_ingester.py  test_parser_python.py  test_parser_typescript.py  test_schema.py
tests/codebase_mcp/: conftest.py  test_run_cypher_limits.py  test_safety.py  test_server_tools.py
tests/session_memory/: conftest.py  test_cross_agent_query.py  test_facts_temporal.py  test_kanban_locking.py  test_lifecycle.py
tests/viz/: conftest.py  test_healthz.py  test_obsidian_export.py  test_server_api.py  test_sri_hashes_present.py  test_sse_heartbeat.py
(+138 files in other folders)
